feat: remove population and usage of the old dbGap dataset property

--- a/src/main/resources/assets/paths/datasetV3ById.yaml
+++ b/src/main/resources/assets/paths/datasetV3ById.yaml
@@ -45,7 +45,7 @@ put:
                       propertyValue: 20
                     - propertyName: Description
                       propertyValue: Description of Dataset
-                    - propertyName: dbGAP
+                    - propertyName: url
                       propertyValue: http://...
                     - propertyName: Data Depositor
                       propertyValue: NHLBI
