--- a/src/main/resources/assets/schemas/Dataset.yaml
+++ b/src/main/resources/assets/schemas/Dataset.yaml
@@ -47,7 +47,7 @@ properties:
         propertyValue: 20
       - propertyName: Description
         propertyValue: Description of Dataset
-      - propertyName: dbGAP
+      - propertyName: url
         propertyValue: http://...
       - propertyName: Data Depositor
         propertyValue: NHLBI
