[DUOS-2877][DUOS-2834][risk=no] Remove old PI Name dataset property in favor of the Study PI Name property (#2277)

--- a/src/main/resources/assets/paths/datasetV3ById.yaml
+++ b/src/main/resources/assets/paths/datasetV3ById.yaml
@@ -33,8 +33,6 @@ put:
                   items:
                     $ref: '../schemas/DatasetProperty.yaml'
                   example:
-                    - propertyName: Dataset Name
-                      propertyValue: Dataset Name
                     - propertyName: Data Type
                       propertyValue: Whole Genome
                     - propertyName: Species
@@ -45,12 +43,8 @@ put:
                       propertyValue: 20
                     - propertyName: Description
                       propertyValue: Description of Dataset
-                    - propertyName: dbGAP
+                    - propertyName: url
                       propertyValue: http://...
-                    - propertyName: Data Depositor
-                      propertyValue: NHLBI
-                    - propertyName: Principal Investigator(PI)
-                      propertyValue: NHLBI
                     - propertyName: Sample Collection ID
                       propertyValue: SC-000
             alternativeDataSharingPlan:
