--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -108,6 +108,8 @@ paths:
           description: Deprecated endpoint. Use  `GET /api/tdr/{identifier}` instead.
   /api/daa/{daaId}:
     $ref: 'paths/daaByDaaId.yaml'
+  /api/daa/{daaId}/file:
+    $ref: 'paths/daaFileByDaaId.yaml'
   /api/daa/{daaId}/{userId}:
     $ref: 'paths/daaForUserId.yaml'
   /api/daa/dac/{dacId}:
