Want to trigger contract tests from my branch off of a FB

--- a/.github/workflows/consumer_contract_tests.yaml
+++ b/.github/workflows/consumer_contract_tests.yaml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - develop
+      - an-DUOS-2952-Consent-DAA-Management-POST-api-daa-request-daaId
     paths-ignore:
       - 'README.md'
   push:
