--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,11 @@ updates:
     schedule:
       # Check for updates to GitHub Actions every week
       interval: "weekly"
+    target-branch: develop
+    reviewers:
+      - "@DataBiosphere/DUOS"
+    commit-message:
+      prefix: "[DUOS-1740-dependabot]"
   - package-ecosystem: maven
     directory: "/"
     schedule:
