[DUOS-1740][risk=no] Version updates for all actions (#2292)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,15 @@
 version: 2
 updates:
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      # Check for updates to GitHub Actions every week
+      interval: "weekly"
+    target-branch: develop
+    reviewers:
+      - "@DataBiosphere/DUOS"
+    commit-message:
+      prefix: "[DUOS-1740-dependabot]"
   - package-ecosystem: maven
     directory: "/"
     schedule:
