[DUOS-2952] POST DAA request API (#2283)
Co-authored-by: Florian Boulnois <fboulnoi@broadinstitute.org>

--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -116,6 +116,8 @@ paths:
     $ref: 'paths/daaById.yaml'
   /api/daa:
     $ref: 'paths/daa.yaml'
+  /api/daa/request/{daaId}:
+    $ref: 'paths/daaRequestByDaaId.yaml'
   /api/dac:
     $ref: 'paths/dac.yaml'
   /api/dac/{dacId}:
