--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,11 @@ updates:
     reviewers:
       - "@DataBiosphere/DUOS"
     commit-message:
-      prefix: "[DUOS-1740-dependabot]"
+      prefix: "[DUOS-1740-actions]"
+    groups:
+      action-dependencies:
+        patterns:
+          - "*"
   - package-ecosystem: maven
     directory: "/"
     schedule:
@@ -21,7 +25,7 @@ updates:
     labels:
       - dependency
     commit-message:
-      prefix: "[DUOS-1740-dependabot]"
+      prefix: "[DUOS-1740-maven]"
     groups:
       maven-dependencies:
         patterns:
@@ -37,7 +41,7 @@ updates:
     labels:
       - dependency
     commit-message:
-      prefix: "[DUOS-1740-dependabot]"
+      prefix: "[DUOS-1740-docker]"
     groups:
       docker-dependencies:
         patterns:
