[DUOS-3048][risk=no] Populate Study Data Custodians From Dataset Properties (#2293)

--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -538,6 +538,8 @@ paths:
     $ref: './paths/studyById.yaml'
   /api/dataset/study/convert/{datasetIdentifier}:
     $ref: './paths/studyConvertByIdentifier.yaml'
+  /api/dataset/study/{studyId}/custodians:
+    $ref: './paths/studyByIdCustodians.yaml'
   /api/dataset/study/registration/{studyId}:
     $ref: './paths/studyRegistrationByStudyId.yaml'
   /api/dataset/{id}:
