feat: only report on develop branch

--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -68,6 +68,7 @@ jobs:
       subuuid: ${{ github.run_id }}
 
   report-workflow:
+    if: github.ref == 'refs/heads/develop'
     uses: broadinstitute/sherlock/.github/workflows/client-report-workflow.yaml@main
     with:
       relates-to-chart-releases: 'consent-dev'
