--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -1,13 +1,15 @@
 name: consent-smoke-tests
 
 on:
+  push:
+    branches:
+      - develop
   pull_request:
-    types:
-      - closed
+    branches:
+      - develop
 
 jobs:
   smoke-tests:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
@@ -66,6 +68,7 @@ jobs:
       subuuid: ${{ github.run_id }}
 
   report-workflow:
+    if: github.ref == 'refs/heads/develop'
     uses: broadinstitute/sherlock/.github/workflows/client-report-workflow.yaml@main
     with:
       relates-to-chart-releases: 'consent-dev'
