[DUOS-3052][DCJ-61] Add or remove DAA from a list of users (#2308)

--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -106,16 +106,18 @@ paths:
       responses:
         404:
           description: Deprecated endpoint. Use  `GET /api/tdr/{identifier}` instead.
+  /api/daa:
+    $ref: 'paths/daa.yaml'
   /api/daa/{daaId}:
     $ref: 'paths/daaByDaaId.yaml'
   /api/daa/{daaId}/file:
     $ref: 'paths/daaFileByDaaId.yaml'
   /api/daa/{daaId}/{userId}:
     $ref: 'paths/daaForUserId.yaml'
+  /api/daa/bulk/{daaId}:
+    $ref: 'paths/daaBulkByDaaId.yaml'
   /api/daa/dac/{dacId}:
     $ref: 'paths/daaById.yaml'
-  /api/daa:
-    $ref: 'paths/daa.yaml'
   /api/daa/request/{daaId}:
     $ref: 'paths/daaRequestByDaaId.yaml'
   /api/dac:
