[DCJ-15] Make DCJ team codeowners
And remove explicit reviewer setting on Dependabot PRs: this will be handled by our Github team configuration.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
+# Lines starting with '#' are comments.
 # Each line is a file pattern followed by one or more owners.
+# Documentation with syntax examples:
+# https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
-# These owners will be the default owners for everything in
-# the repo. Unless a later match takes precedence,
-# the DUOS team will be requested for
-# review when someone opens a pull request.
-* @DataBiosphere/DUOS
+# These owners will be the default owners for everything in the repo.
+*       @DataBiosphere/data-custodian-journeys @DataBiosphere/data-explorer-eng
