bug: response is an array, not an object

--- a/src/main/resources/assets/paths/getDatasetsFromUserDacsV2.yaml
+++ b/src/main/resources/assets/paths/getDatasetsFromUserDacsV2.yaml
@@ -9,7 +9,7 @@ get:
       content:
         application/json:
           schema:
-            type: object
+            type: array
             items:
               $ref: '../schemas/Dataset.yaml'
     404:
