--- a/src/main/resources/assets/schemas/User.yaml
+++ b/src/main/resources/assets/schemas/User.yaml
@@ -20,7 +20,7 @@ properties:
     type: array
     items:
       $ref: './UserRole.yaml'
-  researcherProperties:
+  properties:
     $ref: './UserProperties.yaml'
   libraryCards:
     type: array
