feat: switch tags and lint yaml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      # Check for updates to GitHub Actions every week
-      interval: "weekly"
+      interval: weekly
+    open-pull-requests-limit: 10
     target-branch: develop
     commit-message:
-      prefix: "[DUOS-1740-actions]"
+      prefix: "[DCJ-308-actions]"
     groups:
       action-dependencies:
         patterns:
@@ -21,7 +21,7 @@ updates:
     labels:
       - dependency
     commit-message:
-      prefix: "[DUOS-1740-maven]"
+      prefix: "[DCJ-308-maven]"
     groups:
       maven-dependencies:
         patterns:
@@ -35,7 +35,7 @@ updates:
     labels:
       - dependency
     commit-message:
-      prefix: "[DUOS-1740-docker]"
+      prefix: "[DCJ-308-docker]"
     groups:
       docker-dependencies:
         patterns:
