--- a/src/main/resources/assets/paths/darV3.yaml
+++ b/src/main/resources/assets/paths/darV3.yaml
@@ -21,5 +21,9 @@ post:
             type: array
             items:
               $ref: '../schemas/DataAccessRequest.yaml'
+    400:
+      description: |
+        Bad Request. Input is malformed or user does not have appropriate Data Access Agreement
+        for the requested Datasets
     500:
       description: Internal Server Error.
