--- a/src/main/resources/assets/paths/darV3ByReferenceId.yaml
+++ b/src/main/resources/assets/paths/darV3ByReferenceId.yaml
@@ -25,6 +25,10 @@ put:
         application/json:
           schema:
             $ref: '../schemas/DataAccessRequest.yaml'
+    400:
+      description: |
+        Bad Request. Input is malformed or user does not have appropriate Data Access Agreement
+        for the requested Datasets
     403:
       description: Updates are restricted to the create user.
     500:
