--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -275,14 +275,25 @@ paths:
           description: Internal Server Error
   /api/dacuser:
     $ref: './paths/dacuser.yaml'
+
   /api/dar/v2:
     $ref: './paths/darV2.yaml'
+
+  /api/dar/v3:
+    $ref: './paths/darV3.yaml'
+
   /api/dar/v2/{referenceId}:
     $ref: './paths/darV2ByReferenceId.yaml'
+
   /api/dar/v2/draft:
     post:
-      summary: Create Draft Data Access Request
-      description: Create Draft Data Access Request
+      deprecated: true
+      summary: |
+        Create Draft Data Access Request.
+        See /api/dar/v3/draft for replacement
+      description: |
+        Create Draft Data Access Request.
+        Deprecated in favor of /api/dar/v3/draft
       parameters:
         - name: dar
           in: body
@@ -313,6 +324,10 @@ paths:
                   $ref: './schemas/DataAccessRequest.yaml'
         500:
           description: Internal Server Error.
+
+  /api/dar/v3/draft:
+    $ref: './paths/darV3Draft.yaml'
+
   /api/dar/v2/draft/{referenceId}:
     put:
       summary: Update Draft Data Access Request
@@ -360,6 +375,10 @@ paths:
                 $ref: './schemas/DataAccessRequest.yaml'
         500:
           description: Internal Server Error.
+
+  /api/dar/v3/draft/{referenceId}:
+    $ref: './paths/darV3DraftByReferenceId.yaml'
+
   /api/dar/v2/{referenceId}/irbDocument:
     get:
       summary: Retrieve DAR IRB Document
@@ -620,6 +639,8 @@ paths:
     $ref: './paths/tdrDataset.yaml'
   /api/tdr/dar/draft:
     $ref: './paths/tdrDraftDAR.yaml'
+  /api/tdr/v2/dar/draft:
+    $ref: './paths/tdrV2DraftDAR.yaml'
   /api/emailNotifier/reminderMessage/{voteId}:
     post:
       summary: Send Reminder Email
