--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -124,8 +124,8 @@ paths:
     $ref: 'paths/daaById.yaml'
   /api/daa/request/{daaId}:
     $ref: 'paths/daaRequestByDaaId.yaml'
-  /api/daa/{dacId}/upload/{oldDaaId}/{newDaaName}:
-    $ref: 'paths/daaUploadByDacId.yaml'
+  /api/daa/{dacId}/updated/{oldDaaId}/{newDaaName}:
+    $ref: 'paths/daaUpdateByDacId.yaml'
   /api/dac:
     $ref: 'paths/dac.yaml'
   /api/dac/{dacId}:
