[DCJ-445] Associate DAA with DAC object (#2342)

--- a/src/main/resources/assets/schemas/Dac.yaml
+++ b/src/main/resources/assets/schemas/Dac.yaml
@@ -12,6 +12,10 @@ properties:
   email:
     type: string
     description: Optional DAC Email address
+  associatedDaa:
+    description: The Data Access Agreement selected for this DAC
+    allOf:
+      - $ref: './DataAccessAgreement.yaml'
   createDate:
     type: string
     format: date
