--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,7 +55,7 @@ jobs:
         # Centralized in dsp-tools-k8s; ask in #dsp-devops-champions for help troubleshooting
         token_format: 'id_token'
         workload_identity_provider: 'projects/1038484894585/locations/global/workloadIdentityPools/github-wi-pool/providers/github-wi-provider'
-        service_account: 'gha-iap-accessor@dsp-devops-super-prod.iam.gserviceaccount.com'
+        service_account: 'gcr-publish@broad-dsp-gcr-public.iam.gserviceaccount.com'
         id_token_audience: "1038484894585-k8qvf7l876733laev0lm8kenfa2lj6bn.apps.googleusercontent.com"
     - name: Auth Docker for GCR
       if: github.actor != 'dependabot[bot]'
