feat: allow for updates to study names

--- a/src/main/resources/assets/paths/findAllStudyNames.yaml
+++ b/src/main/resources/assets/paths/findAllStudyNames.yaml
@@ -1,6 +1,7 @@
 get:
   summary: Find All Study Names
   description: Returns a list of all the actively used dataset study names.
+  operationId: findAllStudyNames
   tags:
     - Dataset
     - Study
