feat: return all DAAs for a DAR reference id

--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -289,6 +289,9 @@ paths:
   /api/dar/v2/{referenceId}:
     $ref: './paths/darV2ByReferenceId.yaml'
 
+  /api/dar/v2/{referenceId}/daas:
+    $ref: './paths/darV2DAAsByReferenceId.yaml'
+
   /api/dar/v2/draft:
     post:
       deprecated: true
