--- a/src/main/resources/assets/paths/datasetV2.yaml
+++ b/src/main/resources/assets/paths/datasetV2.yaml
@@ -1,26 +1,12 @@
 get:
-  deprecated: true
-  summary: Get Datasets
+  summary: Get Streamed Datasets
   description: | 
-    Returns Dataset list filtered by authenticated user role.
-    Admins can see all datasets, both active and inactive.
-    Chairpersons can see all active datasets and inactive ones 
-    associated to any of their Data Access Committees. 
-    All other users can see active datasets.
-    If the optional `asCustodian` parameter is provided, all datasets that the user has created
-    or is specified as a custodian for will be returned.
+    Returns all Datasets in a streamed format. This endpoint can be slow, but will eventually complete.
   tags:
     - Dataset
-  parameters:
-    - name: asCustodian
-      in: query
-      description: Query for datasets as a Data Custodian
-      required: false
-      schema:
-        type: boolean
   responses:
     200:
-      description: A list of Datasets
+      description: A streaming list of Datasets
       content:
         application/json:
           schema:
