--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <maven.compiler.target>21</maven.compiler.target>
     <liquibase.version>4.29.1</liquibase.version>
     <dropwizard.version>4.0.4</dropwizard.version>
-    <logback.version>1.4.14</logback.version>
+    <logback.version>1.5.7</logback.version>
     <pact.version>4.6.13</pact.version>
     <postgres.version>42.7.3</postgres.version>
     <surefire.version>3.3.1</surefire.version>
@@ -547,10 +547,11 @@
     </dependency>
 
     <!-- Security update. See https://broadworkbench.atlassian.net/browse/DUOS-2826 -->
+    <!-- Logback Access module moved to new location. See https://logback.qos.ch/news.html -->
     <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-access</artifactId>
-        <version>${logback.version}</version>
+        <groupId>ch.qos.logback.access</groupId>
+        <artifactId>common</artifactId>
+        <version>2.0.3</version>
     </dependency>
     <!-- Security update. See https://broadworkbench.atlassian.net/browse/DUOS-2826 -->
     <dependency>
