--- a/src/main/resources/assets/paths/datasetById.yaml
+++ b/src/main/resources/assets/paths/datasetById.yaml
@@ -1,3 +1,34 @@
+patch:
+  summary: Patch Dataset
+  description: Patch the dataset with provided values. Anything not provided is ignored
+  parameters:
+    - name: id
+      in: path
+      description: ID of the Dataset
+      required: true
+      schema:
+        type: integer
+  tags:
+    - Dataset
+  responses:
+    204:
+      description: Dataset Patch applied successfully
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/Dataset.yaml'
+    304:
+      description: Dataset not modified
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/Dataset.yaml'
+    400:
+      description: Dataset Patch is not formatted correctly
+    404:
+      description: Not Found
+    500:
+      description: Server error.
 delete:
   summary: Delete Dataset
   description: Deletes Dataset and DatasetProperties of the Dataset specified by id.
@@ -20,6 +51,7 @@ delete:
     500:
       description: Server error.
 put:
+  deprecated: true
   summary: Updates the Dataset from JSON
   description: Updates the Dataset from JSON
   parameters:
