--- a/src/main/resources/assets/api-docs.yaml
+++ b/src/main/resources/assets/api-docs.yaml
@@ -499,6 +499,14 @@ paths:
     $ref: './paths/datasetSummaryAutocomplete.yaml'
   /api/dataset/search/index:
     $ref: './paths/datasetSearchIndex.yaml'
+  /api/draft/v1:
+    $ref: './paths/draftIndex.yaml'
+  /api/draft/v1/{draftUUID}:
+    $ref: './paths/draftSubmissionIndex.yaml'
+  /api/draft/v1/{draftUUID}/attachments:
+    $ref: './paths/draftSubmissionAttachmentsIndex.yaml'
+  /api/draft/v1/{draftUUID}/attachements/{fileId}:
+    $ref: './paths/draftSubmissionAttachments.yaml'
   /api/tdr/{identifier}/approved/users:
     $ref: './paths/tdrDatasetApprovedUsers.yaml'
   /api/tdr/{identifier}:
