--- a/src/main/resources/assets/paths/draftDocumentIndex.yaml
+++ b/src/main/resources/assets/paths/draftDocumentIndex.yaml
@@ -1,8 +1,8 @@
 get:
-  summary: Get a draft submission
-  description: Provides the draft submission contents and metadata.
+  summary: Get a draft
+  description: Provides the draft contents and metadata.
   tags:
-  - DraftSubmission
+  - Draft
   parameters:
     - name: draftUUID
       in: path
@@ -13,20 +13,20 @@ get:
         format: UUID v4.
   responses:
     200:
-     description: A dataset draft submission with metadata.
+     description: A draft with metadata.
      content:
        application/json:
          schema:
-          $ref: '../schemas/DraftSubmissionDetails.yaml'
+          $ref: '../schemas/DraftDetails.yaml'
     401:
       description: Unauthorized.  Did you remember to authenticate?
     404:
       description: The draft cannot be found.
 put:
-  summary: Updates a draft submission
-  description: Updates the contents of the draft submission.
+  summary: Updates a draft
+  description: Updates the contents of the draft.
   tags:
-    - DraftSubmission
+    - Draft
   parameters:
     - name: draftUUID
       in: path
@@ -44,21 +44,21 @@ put:
           type: object
   responses:
       200:
-        description: A dataset draft submission with metadata.
+        description: A draft with metadata.
         content:
           application/json:
            schema:
-            $ref: '../schemas/DraftSubmissionDetails.yaml'
+            $ref: '../schemas/DraftDetails.yaml'
       401:
         description: Unauthorized.  Did you remember to authenticate?
       404:
         description: The draft cannot be found.
 
 delete:
-  summary: Deletes a draft submission
-  description: Deletes the contents and attachments of a draft submission.
+  summary: Deletes a draft
+  description: Deletes the contents and attachments of a draft.
   tags:
-    - DraftSubmission
+    - Draft
   parameters:
     - name: draftUUID
       in: path
