--- a/src/main/resources/assets/schemas/DraftDetails.yaml
+++ b/src/main/resources/assets/schemas/DraftDetails.yaml
@@ -4,4 +4,4 @@ properties:
     type: object
     description: The JSON object composed by the form.
   meta:
-    $ref: './DraftSubmission.yaml'
+    $ref: './Draft.yaml'
