feat: remove file type updates - cannot get it to work correctly

--- a/src/main/resources/assets/paths/datasetById.yaml
+++ b/src/main/resources/assets/paths/datasetById.yaml
@@ -2,18 +2,12 @@ patch:
   summary: Patch Dataset
   description: |
     This API allows Admins, Chairpersons, and Data Submitters to patch a limited set of dataset
-    properties. File Types and Data Location must conform to the schema defined in
+    properties. Data Location must conform to the schema defined in
     [/schemas/dataset-registration/v1](#/Schema/getDatasetRegistrationSchemaV1)
       * The dataset name. This is an optional field
       * List of optional properties to update
         * \# of participants must be an integer value greater than zero
         * URL must be a valid url
-        * File Types must be a list of valid file types
-          * Arrays
-          * Genome
-          * Exome
-          * Survey
-          * Phenotype
         * Data Location must be a valid data location:
           * AnVIL Workspace
           * Terra Workspace
